<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Calls Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="send_report">Send Report</string>
    <string name="title_activity_settings">Settings</string>
    <string name="private_number">Private Number</string>

    <string name="tab_permissions">Permissions</string>

    <string name="pref_bt_device_no_device">No device</string>
    <string name="pref_bt_device_template" translatable="false">%1$s [ %2$s ]</string>

    <string name="bluetooth_disabled">Bluetoooth disabled</string>
    <string name="enable">Enable</string>
    <string name="info_ip_address" translatable="false">IP: %1$s:%2$d</string>

    <!-- Debug Fragment -->
    <string name="tab_debug">Debug</string>

    <string name="event">Event</string>
    <string name="state">State</string>
    <string name="phone_number">Phone number</string>
    <string name="find_contact">Tap to find contact</string>
    <string name="message_text">Message text</string>
    <string name="debug_send_data">Send Debug Event</string>
    <string name="debug_show_notification">Show Debug Notification</string>
    <string name="warning_enter_phone_number">Please, enter phone number</string>

    <string-array name="spinner_array_event" translatable="false">
        <item>call</item>
        <item>sms</item>
    </string-array>

    <string-array name="spinner_array_state" translatable="false">
        <item>ringing</item>
        <item>offhook</item>
        <item>idle</item>
        <item>missed</item>
    </string-array>
    <!-- _____ ________ -->



    <!-- Permissions Fragment -->
    <string name="perm_denied">\tdenied</string>
    <string name="perm_allow">\tallow</string>
    <string name="perm_request">request</string>

    <string name="perm_draw_overlays">Draw Overlays</string>
    <string name="perm_read_contacts">Read Contacts</string>
    <string name="perm_call_phone">Call Phone</string>
    <string name="perm_send_sms">Send SMS</string>
    <string name="perm_gps">GPS</string>
    <!-- ___________ ________ -->



    <!-- Notification -->
    <string name="notification_id" translatable="false">%1$s|%2$s|%3$s</string>

    <string name="incoming_call">Incoming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="incoming_sms">Incoming SMS</string>
    <string name="incoming_message">Incoming message</string>

    <string name="button_text_call_dismiss">Dismiss</string>
    <string name="button_text_call_answer">Answer</string>
    <string name="button_text_sms" translatable="false">SMS #%1$d</string>
    <string name="button_text_gps" translatable="false">GPS</string>
    <!-- ____________ -->


    <!-- Strings related to Settings -->
    <string name="pref_title_connection_type">Connection type</string>
    <string name="pref_default_connection_type" translatable="false">bluetooth</string>
    <string-array name="pref_entries_connection_type" translatable="false">
        <item>Bluetooth</item>
        <item>WiFi</item>
    </string-array>
    <string-array name="pref_values_connection_type" translatable="false">
        <item>bluetooth</item>
        <item>http</item>
    </string-array>
    <string name="pref_title_web_server_port">Port</string>
    <string name="pref_default_web_server_port" translatable="false">8877</string>
    <string name="pref_title_special_ssid_checkbox">Specify SSID</string>
    <string name="pref_summary_special_ssid_checkbox">If enabled, notifications will only work when connected to the specified WiFi network\n
         SSID is the name of your WiFi network\n
         You can specify multiple networks separated by commas</string>
    <string name="pref_title_special_ssid" translatable="false">SSID</string>
    <string name="pref_default_special_ssid" translatable="false"></string>

    <string name="pref_title_web_server_host">\"Tablet\'s\" IP</string>
    <string name="pref_default_web_server_host" translatable="false">192.168.43.250</string>
    <bool name="pref_default_device_server" translatable="false">false</bool>

    <string name="pref_header_connection">Connection</string>
    <string name="pref_header_phone">Client (\"Phone\")</string>
    <string name="pref_header_tablet">Server (\"Tablet\")</string>

    <string name="pref_category_connection">Connection</string>
    <string name="pref_category_show_noty_for">Notifications</string>
    <string name="pref_category_notification_style">Notification Style</string>
    <string name="pref_category_extra_buttons">Show buttons</string>


    <string name="pref_title_bluetooth_device">Bluetooth device</string>
    <string name="pref_title_noty_show_incoming_calls">Show for Incoming Calls</string>
    <string name="pref_title_noty_show_outgoing_calls">Show for Outgoing Calls</string>
    <string name="pref_title_noty_show_sms">Show for SMS</string>
    <string name="pref_title_normal_size">UI size (dp)</string>
    <string name="pref_default_normal_size" translatable="false">20</string>
    <string name="pref_title_noty_width">Width (%)</string>
    <string name="pref_default_noty_width" translatable="false">66</string>
    <string name="pref_default_message">I\'m driving. I\'ll call you later.</string>
    <string name="pref_title_show_button">Show button</string>
    <string name="pref_title_message">Message</string>
    <string name="pref_title_message_gps">Message (before link)</string>
    <string name="pref_default_message_gps">I\'m on my way:</string>

    <bool name="pref_default_small_close_zone">false</bool>
    <string name="pref_title_small_close_zone">Small close zone</string>
    <string name="pref_summary_small_close_zone">When enabled, notification will close only on
        click at name/phone</string>
</resources>
