<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference android:key="noty_enabled"
        android:title="@string/pref_title_noty_enabled"
        android:defaultValue="true" />

    <SwitchPreference android:key="noty_show_calls"
        android:title="@string/pref_title_noty_show_calls"
        android:defaultValue="true"
        android:dependency="noty_enabled" />

    <SwitchPreference android:key="noty_show_sms"
        android:title="@string/pref_title_noty_show_sms"
        android:defaultValue="true"
        android:dependency="noty_enabled" />

    <PreferenceCategory
        android:title="Style">

        <EditTextPreference android:key="normal_size"
            android:defaultValue="@string/pref_default_normal_size"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_normal_size" />

        <EditTextPreference android:key="noty_width"
            android:defaultValue="@string/pref_default_noty_width"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_noty_width" />

    </PreferenceCategory>

</PreferenceScreen>
