<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="SMS #1">

        <SwitchPreference android:key="s1"
            android:defaultValue="true"
            android:title="@string/pref_title_show_button" />

        <EditTextPreference android:key="message_sms_1"
            android:title="@string/pref_title_message"
            android:defaultValue="@string/pref_default_message"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:dependency="s1" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="SMS #2">

        <SwitchPreference android:key="s2"
            android:defaultValue="false"
            android:title="@string/pref_title_show_button" />

        <EditTextPreference android:key="message_sms_2"
            android:title="@string/pref_title_message"
            android:defaultValue="@string/pref_default_message"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:dependency="s2" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="SMS #3">

        <SwitchPreference android:key="s3"
            android:defaultValue="false"
            android:title="@string/pref_title_show_button" />

        <EditTextPreference android:key="message_sms_3"
            android:title="@string/pref_title_message"
            android:defaultValue="@string/pref_default_message"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:dependency="s3" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="GPS">

        <SwitchPreference android:key="gps"
            android:defaultValue="true"
            android:title="@string/pref_title_show_button" />

        <EditTextPreference android:key="message_gps"
            android:title="@string/pref_title_message_gps"
            android:defaultValue="@string/pref_default_message_gps"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:dependency="gps" />

    </PreferenceCategory>



</PreferenceScreen>
