<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kg.delletenebre.callsassistant.MainActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:labelFor="@+id/event"
            android:text="@string/event" />
        <Spinner
            android:id="@+id/event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:entries="@array/spinner_array_event" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:textSize="12sp"
            android:labelFor="@+id/state"
            android:text="@string/state" />
        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:entries="@array/spinner_array_state" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:hint="@string/phone_number" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/contact_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:padding="5dip">

            <LinearLayout
                android:id="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:padding="3dip" >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/contact_photo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_person_black"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#44000000"
                    android:layout_gravity="top"
                    android:contentDescription="contact photo"/>

            </LinearLayout>

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_contact"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/thumbnail"
                android:layout_toEndOf="@+id/thumbnail" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/message_text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_debug_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/debug_send_data" />

        <Button
            android:id="@+id/button_debug_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/debug_show_notification" />

    </LinearLayout>

</ScrollView>