<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kg.delletenebre.callsassistant.PermissionsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perm_draw_overlays"/>

            <TextView
                android:id="@+id/status_draw_overlays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/perm_denied"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/request_draw_overlays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/perm_request" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perm_read_contacts"/>

            <TextView
                android:id="@+id/status_read_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/perm_denied"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/request_read_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/perm_request" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perm_call_phone"/>

            <TextView
                android:id="@+id/status_call_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/perm_denied"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/request_call_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/perm_request" />

        </TableRow>

        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:minHeight="48dip"-->
            <!--android:gravity="center_vertical">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/perm_receive_sms"/>-->

            <!--<TextView-->
                <!--android:id="@+id/status_receive_sms"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/perm_denied"/>-->

            <!--<android.support.v7.widget.AppCompatButton-->
                <!--android:id="@+id/request_receive_sms"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/perm_request" />-->

        <!--</TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perm_send_sms"/>

            <TextView
                android:id="@+id/status_send_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/perm_denied"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/request_send_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/perm_request" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perm_gps"/>

            <TextView
                android:id="@+id/status_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/perm_denied"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/request_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/perm_request" />

        </TableRow>

    </TableLayout>

</ScrollView>
